--- a/settings.ini
+++ b/settings.ini
@@ -29,7 +29,7 @@ title = %(lib_name)s
 ### PyPI ###
 audience = Developers
 author = mkram
-author_email = maheshkr81@gmail.com
+author_email = myemail@gmail.com
 copyright = 2023 onwards, %(author)s
 description = Hello world with nbdev
 keywords = nbdev jupyter notebook python
